fixing breaks in rendering

--- a/style.css
+++ b/style.css
@@ -17,14 +17,16 @@ body{
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
+  border: 20px solid #152938;
 }
 
 .game_board-header {
-  /* border: 1px solid #304859; */
-  margin: 3rem auto;
+  border: 3px solid #304859;
+  margin: 3rem auto; 
   display: flex;
-  min-width: 19rem;
+  width: calc(100% - 10%);
+  max-width: 600px;
 }
 
 .game_board-header-controls {
@@ -37,12 +39,12 @@ body{
   align-self: start;
 }
 .restart {
-  margin-right: 0.5rem;
+  margin-right: 0.2rem;
   background-color: #fda214;
   color: #fff;
   border-radius: 1rem;
-  padding: 0.3rem 0.9rem;
-  font-size: 0.7rem;
+  padding: 0.3rem 0.7rem;
+  font-size: 0.6rem;
   font-weight: 700;
 }
 
@@ -51,11 +53,11 @@ body{
 }
 
 .new_game {
-  background-color: #f2f2f2;
+  background-color: #BCCED1;
   color: #304859;
   border-radius: 1rem;
-  padding: 0.3rem 0.9rem;
-  font-size: 0.7rem;
+  padding: 0.3rem 0.7rem;
+  font-size: 0.6rem;
   font-weight: 700;
 }
 
@@ -65,7 +67,7 @@ body{
 
 .logo {
   align-self: start;
-  width: 5rem;
+  width: 3rem;
   margin: auto 0;
 }
 
@@ -91,7 +93,7 @@ body{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  max-width: 20rem;
+  max-width: 18rem;
   margin: 0 auto;
   align-items: space-between;
 }
@@ -139,7 +141,8 @@ body{
 .in_game_info {
   margin: 3rem auto;
   display: flex;
-  min-width: 18rem;
+  width: calc(100% - 10%);
+  max-width: 600px;
 }
 
 .time_container,
@@ -170,21 +173,21 @@ body{
 .time,
 .moves {
   margin-left: auto;
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: 700;
 }
 
 /* while we get bigger */
-@media only screen and (min-width: 320px) {
+@media only screen and (min-width: 600px) {
   .game_board-header{
-    min-width: 22rem;
+    /* max-width: calc(50%) */
   }
 }
-@media only screen and (min-width: 400px) {
+/* @media only screen and (min-width: 400px) {
   .game_board-header{
 min-width: 30rem;
   }
-}
+} */
 
 .visible {
   display: block;
